--- a/css/style.css
+++ b/css/style.css
@@ -4,8 +4,8 @@ IMPORT
 
 @font-face {
     font-family: "Flaticon";
-    src: url("fonts/Flaticon.eot");
-    src: url("fonts/Flaticon.eot?#iefix") format("embedded-opentype"), url("fonts/Flaticon.woff") format("woff"), url("fonts/Flaticon.ttf") format("truetype"), url("fonts/Flaticon.svg#Flaticon") format("svg");
+    src: url("../fonts/Flaticon.eot");
+    src: url("../fonts/Flaticon.eot?#iefix") format("embedded-opentype"), url("../fonts/Flaticon.woff") format("woff"), url("../fonts/Flaticon.ttf") format("truetype"), url("../fonts/Flaticon.svg#Flaticon") format("svg");
     font-weight: normal;
     font-style: normal;
 }
@@ -13,7 +13,7 @@ IMPORT
 @media screen and (-webkit-min-device-pixel-ratio:0) {
     @font-face {
         font-family: "Flaticon";
-        src: url("fonts/Flaticon.svg#Flaticon") format("svg");
+        src: url("../fonts/Flaticon.svg#Flaticon") format("svg");
     }
 }
 
@@ -360,7 +360,7 @@ HEADER
 
 .modal-backdrop.in {
     opacity: 1;
-    background: url(images/pattern.png) repeat center center rgba(0, 0, 0, 1);
+    background: url(../images/pattern.png) repeat center center rgba(0, 0, 0, 1);
 }
 
 .modal-header {
@@ -1018,7 +1018,7 @@ SECTIONS
     left: 0;
     bottom: 0;
     z-index: 1;
-    background: url(images/pattern.png) repeat center center rgba(0, 0, 0, 0.7);
+    background: url(../images/pattern.png) repeat center center rgba(0, 0, 0, 0.7);
 }
 
 .video-section {
@@ -1990,7 +1990,7 @@ FOOTER
     margin-top: -45%;
     padding: 6rem 4rem;
     position: relative;
-    background: url(upload/formbg.jpg) no-repeat top center #161616;
+    background: url(../upload/formbg.jpg) no-repeat top center #161616;
 }
 
 .absolute-widget .form-control {
